docs(workflow-core): 全量代码整洁化 — why 注释 / javadoc / package-info + 4 处小修
整洁化（注释与文档，零行为改动）
- 7 个包补 package-info.java（一句定位 + 副作用约束）；新增 docs/CALL_GRAPH.md。
- 复杂逻辑补 "why" 注释：WorkflowGraph(Tarjan 各分支) / FlowDef(build 编译流程、
  joinSpec×ensureNode 交互、递归 nestedJoin) / DeterminismGuard(黑名单设计动机、
  常量池双 slot、二级间接解析) / GraphValidator(每条规则 error vs warning 的理由) /
  ConditionEvaluator(bare-identifier 短路次序、reserved 名 fall-through)。
- 9 个内置 Handler 的 run/canAccept/onEvent 分支语义注释（timeout 优先判定、
  decision 归一化、SENDBACK 压过 pending、ANY null-child 折叠、子流程部分映射穿透）。
- 方法级 javadoc 补缺：EdgeMatch 工厂 / WorkflowGraph 查询 / NodeHandlerRegistry；
  ExecutionRecord 等裸 record 补类级 javadoc。

API 微调
- NodeConfigCodec.decode 删冗余 nodeType 参数（从 handler.type() 推导）；
  WorkflowInterpreter 两处调用点同步。

4 处审查发现的小修
- TaskGroupHandler.onEvent：删死条件 ctx != null（parent 非 null 已蕴含）。
- DeterminismGuard：FORBIDDEN_TYPES 移除 java.lang.System（类型级会误报
  System.arraycopy 等良性调用；currentTimeMillis/nanoTime 由方法级黑名单覆盖），
  javadoc 与测试断言同步固化新设计。
- ServiceTaskHandler.onEvent：payload null 早退，消除相邻重复守卫。
- GraphValidator：抽 validateConfigBinding(node, handler) 私有助手，主校验循环
  复用已查到的 handler，消除每节点重复 registry.find；公共 validateNodeConfig
  签名不变。

验证：core 292 通过 / 0 失败；远端 TEMPORAL_TARGET 全模块 40 通过 / 0 失败。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>